--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- workbench start -->
+    <!-- styles -->
+    <link
+      href="https://assets.oneweb.mercedes-benz.com/plugin/workbench/core/5.5.0/css/globals.css"
+      rel="stylesheet"
+    />
+
+    <!-- components -->
+    <script
+      type="module"
+      src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/core/5.5.0/workbench/workbench.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://assets.oneweb.mercedes-benz.com/plugin/workbench/core/5.5.0/workbench/workbench.js"
+    ></script>
+    <!-- workbench end -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
